--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.ProyectParkingCam"
         tools:targetApi="31">
         <activity
+            android:name=".MenuPrincipal"
+            android:exported="false" />
+        <activity
+            android:name=".Menu"
+            android:exported="false" />
+        <activity
+            android:name=".RegistroSalida"
+            android:exported="false" />
+        <activity
             android:name=".EscanearPlaca"
             android:exported="false" />
         <activity
