--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,12 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_iconapp"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_iconapp_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectParkingCam"
         tools:targetApi="31">
-        <activity
-            android:name=".MenuPrincipal"
-            android:exported="false" />
         <activity
             android:name=".Menu"
             android:exported="false" />
@@ -23,7 +20,7 @@
             android:name=".RegistroSalida"
             android:exported="false" />
         <activity
-            android:name=".EscanearPlaca"
+            android:name=".RegistroEntrada"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
