--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_iconapp"
+        android:icon="@mipmap/ic_logonapp"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_iconapp_round"
+        android:roundIcon="@mipmap/ic_logonapp_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectParkingCam"
         tools:targetApi="31">
